force-app/main/default/objects/VIAvenant__c/VIAvenant__c.object-meta.xml
<CustomObject>
    <label>Avenant</label>
    <nameField>
        <displayFormat>A{0000000}</displayFormat>
        <label>Ref de Avenant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Avenants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>