force-app/main/default/objects/VIAvenant__c/fields/Affaire__c.field-meta.xml
<CustomField>
    <fullName>Affaire__c</fullName>
    <label>Affaire</label>
    <referenceTo>VIAffaire__c</referenceTo>
    <relationshipLabel>Avenants</relationshipLabel>
    <relationshipName>Avenants</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>