force-app/main/default/objects/VIAvenant__c/fields/Code_avenant__c.field-meta.xml
<CustomField>
    <fullName>Code_avenant__c</fullName>
    <label>Code avenant</label>
    <length>255</length>
    <type>Text</type>
</CustomField>