force-app/main/default/objects/VIAvenant__c/fields/Complet__c.field-meta.xml
<CustomField>
    <fullName>Complet__c</fullName>
    <label>Complet</label>
    <summarizedField>VILigne_Budget__c.Complet__c</summarizedField>
    <summaryForeignKey>VILigne_Budget__c.Avenant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>