force-app/main/default/objects/VIAvenant__c/fields/Complet_E__c.field-meta.xml
<CustomField>
    <fullName>Complet_E__c</fullName>
    <label>Complet €</label>
    <summarizedField>VILigne_Budget__c.Complet_E__c</summarizedField>
    <summaryForeignKey>VILigne_Budget__c.Avenant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>