force-app/main/default/objects/VIAvenant__c/fields/Debours__c.field-meta.xml
<CustomField>
    <fullName>Debours__c</fullName>
    <label>Debours</label>
    <summarizedField>VILigne_Budget__c.Debours__c</summarizedField>
    <summaryForeignKey>VILigne_Budget__c.Avenant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>