force-app/main/default/objects/VIAvenant__c/fields/PRI__c.field-meta.xml
<CustomField>
    <fullName>PRI__c</fullName>
    <label>PRI</label>
    <summarizedField>VILigne_Budget__c.PRI__c</summarizedField>
    <summaryForeignKey>VILigne_Budget__c.Avenant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>