force-app/main/default/objects/VIAvenant__c/fields/PRI_E__c.field-meta.xml
<CustomField>
    <fullName>PRI_E__c</fullName>
    <label>PRI €</label>
    <summarizedField>VILigne_Budget__c.PRI_E__c</summarizedField>
    <summaryForeignKey>VILigne_Budget__c.Avenant__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>