force-app/main/default/objects/VIAvenant__c/fields/PV__c.field-meta.xml
<CustomField>
    <fullName>PV__c</fullName>
    <label>PV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>