force-app/main/default/objects/VIAvenant__c/fields/PV_E__c.field-meta.xml
<CustomField>
    <fullName>PV_E__c</fullName>
    <label>PV €</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>