force-app/main/default/objects/VIAvenant__c/fields/Statut_avenant__c.field-meta.xml
<CustomField>
    <fullName>Statut_avenant__c</fullName>
    <defaultValue>&apos;10 Prévue&apos;</defaultValue>
    <label>Statut de l&apos;avenant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Affaire_Statut</valueSetName>
    </valueSet>
</CustomField>