force-app/main/default/objects/VIAvenant__c/validationRules/DEbours_a_zero_impossible_de_valider.validationRule-meta.xml
<ValidationRule>
    <fullName>DEbours_a_zero_impossible_de_valider</fullName>
    <active>false</active>
    <errorConditionFormula>and(
    or(
        Debours__c =0, 
        Debours__c =null
      ),
    left(text( Statut_avenant__c ) ,2)!=&apos;10&apos;
   )</errorConditionFormula>
    <errorMessage>Il n&apos;est pas possible de valider à un avenant dont la somme est zéro</errorMessage>
</ValidationRule>