force-app/main/default/objects/VIAvenant__c/validationRules/devise_de_l_avenant.validationRule-meta.xml
<ValidationRule>
    <fullName>devise_de_l_avenant</fullName>
    <active>true</active>
    <errorConditionFormula>text(CurrencyIsoCode) != text(Affaire__r.CurrencyIsoCode)</errorConditionFormula>
    <errorMessage>La devise de f&apos;affaire doit être identique à celle de l&apos;avenant</errorMessage>
</ValidationRule>