force-app/main/default/objects/VIAvenant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Affaire__c</columns>
    <columns>Date__c</columns>
    <columns>Statut_avenant__c</columns>
    <filterScope>Everything</filterScope>
    <label>Tout</label>
</ListView>